--- a/src/0/index.html
+++ b/src/0/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>moment.js on require.js</title>
+    <title>date-fns 日時ライブラリ CDN</title>
     <script data-main="app.js" src="js/lib/require/require.min.js"></script>
 </head>
 <body>
