--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>moment.js 日時ライブラリ</title>
+    <title>date-fns 日時ライブラリ</title>
 </head>
 <body>
-    <h1>moment.js 日時ライブラリ</h1>
+    <h1>date-fns 日時ライブラリ</h1>
     <ul>
-    <li><a href="src/0/index.html">min</a></li>
-    <li><a href="src/1/index.html">require.js プラグイン domReady と併用</a></li>
+    <li><a href="src/0/index.html">CDN</a></li>
+    <li><a href="src/1/index.html">CDNをローカル保存して参照</a></li>
     </ul>
 </body>
 </html>
